# Calc

./: CMakeLists.txt  build.sh  clear.sh  run.sh
src/CalcCore/: CMakeLists.txt  calc.cpp  const.cpp  constTable.cpp  exception.cpp  math.cpp  mathobject.cpp  objectTable.cpp  strtosolve.cpp  var.cpp  varTable.cpp
src/CalcCore/include/: calc.h  calculator.h  const.h  constTable.h  exception.h  mathobject.h  objectTable.h  strtosolve.h  tokenValue.h  var.h  varTable.h
src/Console/: CMakeLists.txt  main.cpp
